test/files/neg/interop_classtags_arenot_manifests.scala
object Test extends App {
  def arrayTagIsnotManifest[T: ArrayTag] = {
    println(manifest[T])
  }

  arrayTagIsnotManifest[Int]
  arrayTagIsnotManifest[String]
  arrayTagIsnotManifest[Array[Int]]

  def classTagIsnotManifest[T: ClassTag] = {
    println(manifest[T])
  }

  classTagIsnotManifest[Int]
  classTagIsnotManifest[String]
  classTagIsnotManifest[Array[Int]]
}